samples/_failures_safe/1761639927_48d144_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed617d62.c: In function ‘main’:
./samples/SAFE/__tmp_ed617d62.c:147:5: error: expected expression at end of input
  147 |     add_edge(&
      |     ^~~~~~~~
./samples/SAFE/__tmp_ed617d62.c:147:5: error: too few arguments to function ‘add_edge’
./samples/SAFE/__tmp_ed617d62.c:30:6: note: declared here
   30 | void add_edge(Graph *g, int u, int v, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_ed617d62.c:147:5: error: expected declaration or statement at end of input
  147 |     add_edge(&
      |     ^~~~~~~~
